--- a/collections/src/main/webapp/flows/car/carnewedit.xhtml
+++ b/collections/src/main/webapp/flows/car/carnewedit.xhtml
@@ -49,14 +49,21 @@
 
 							<h:outputLabel value="Model : *" for="txt_model"></h:outputLabel>
 							<p:inputText id="txt_model" value="#{car.model}" required="true"
-								label="Model" />
+								label="Model" size="30"/>
 
 							<h:outputLabel value="Year : *" for="txt_year"></h:outputLabel>
 							<p:inputText id="txt_year" value="#{car.year}" required="true"
-								label="Year">
+								label="Year" size="10">
 								<f:validateDoubleRange minimum="1900" maximum="2100" />
 							</p:inputText>
 
+							<h:outputLabel value="Manufacturing Number : " for="txt_manufacturingNumber"></h:outputLabel>
+							<p:inputText id="txt_manufacturingNumber" value="#{car.manufacturingNumber}"
+								label="Year" size="10">
+							</p:inputText>
+
+							<h:outputLabel value="Rating : " for="txt_rating"></h:outputLabel>
+        					<p:rating value="#{car.rating}" stars="5"/>
 
 							<p:outputLabel value="Image : *" for="txt_file" />
 							<p:fileUpload id="txt_file"
@@ -85,15 +92,15 @@
 							</p:column>
 
 							<p:column headerText="Action">
-								<p:commandButton title="Delete" ajax="false" action="delete"
+								<p:commandButton title="Delete" ajax="false" action="deleteImage"
 									icon="fa fa-trash" onclick="PF('loading').show();"
 									oncomplete="PF('loading').hide();">
-									<f:param name="idCarBrand" value="#{item.id}"></f:param>
+									<f:param name="idImage" value="#{item.id}"></f:param>
 								</p:commandButton>
 							</p:column>
 
 							<f:facet name="footer">
-					        In total there are #{fn:length(car.lstImagenBean)} images.
+					        	In total there are #{fn:length(car.lstImagenBean)} images.
 							</f:facet>
 						</p:dataTable>
 					</p:outputPanel>
@@ -106,7 +113,7 @@
 
 				<p:commandButton id="btn_reset" value="Reset" action="reinit"
 					icon="fa fa-refresh" immediate="true"
-					onclick="PF('loading').show();" oncomplete="PF('loading').hide();" />
+					onclick="PF('loading').show();" oncomplete="PF('loading').hide();" rendered="#{car.id != null}"/>
 
 				<p:commandButton id="btn_new" value="New" ajax="false"
 					action="add" icon="fa fa-check" onclick="PF('loading').show();" rendered="#{car.id == null}"/>
