--- a/collections/src/main/webapp/flows/carTrademark/carTrademark.xhtml
+++ b/collections/src/main/webapp/flows/carTrademark/carTrademark.xhtml
@@ -59,8 +59,8 @@
 					</p:column>
 
 					<p:column headerText="Image">
-   						<p:graphicImage value="/images/carTrademark/trademark-black.png" rendered="#{item.urlImage == null}" title="No image" width="60" height="60"/>
-						<p:graphicImage value="#{item.urlImage}" rendered="#{item.urlImage != null}" title="Image" width="120" height="60"/>
+   						<p:graphicImage value="/images/carTrademark/trademark-black.png" rendered="#{item.imageBean.url == null}" title="No image" width="120" height="60"/>
+						<p:graphicImage value="#{item.imageBean.url}" rendered="#{item.imageBean.url != null}" title="Image" width="120" height="60"/>
 					</p:column>
 
 					<p:column headerText="Action">
