--- a/collections/src/main/webapp/flows/carBrand/carBrand.xhtml
+++ b/collections/src/main/webapp/flows/carBrand/carBrand.xhtml
@@ -58,21 +58,21 @@
                     	List of Car Brands
                     </f:facet>
 
-					<p:column headerText="Name">
+					<p:column headerText="Name" sortBy="#{item.name}" style="text-align: center">
 						<f:facet name="header">
 							<h:outputText value="Name" />
 						</f:facet>
 						<h:outputText value="#{item.name}" />
 					</p:column>
 
-					<p:column headerText="Image">
+					<p:column headerText="Image"   style="text-align: center">
 						<p:graphicImage value="/images/carBrand/Brand-black.png"
 							rendered="#{item.imageBean.url == null}" title="No image" width="60" height="60" />
 						<p:graphicImage value="#{item.imageBean.url}"
-							rendered="#{item.imageBean.url != null}" title="Image" width="60" height="60" />
+							rendered="#{item.imageBean.url != null}" title="#{item.name}" width="60" height="60" />
 					</p:column>
 
-					<p:column headerText="Action">
+					<p:column headerText="Action" style="text-align: center">
 						<p:commandButton title="Delete" ajax="false" action="delete" immediate="true"
 							icon="fa fa-trash" onclick="PF('loading').show();"
 							oncomplete="PF('loading').hide();">
